# python-integrations

./: CHANGELOG.md  Makefile  README.md  setup.cfg
.github/workflows/: build.yml  coverage.yml  publish-pypi.yml
disruptive/: __init__.py
disruptive/integrations/: __init__.py
dtintegrations/: __init__.py  outputs.py  provider.py  request.py
dtintegrations/data_connector/: __init__.py  http_push.py  metadata.py
examples/: aws-lambda.py  aws_lambda.py  azure-function.py  azure_function.py  django-server.py  django_server.py  flask-server.py  flask_server.py  google-cloud-function.py  google_cloud_function.py
tests/: conftest.py  events.py  framework.py  test_http_push.py  test_metadata.py  test_outputs.py  test_request.py
