[metadata]
name = dtintegrations
version = attr: dtintegrations.__version__
description = Disruptive Technologies Python Integrations.
long_description_content_type = text/markdown
long_description = file: README.md
author = Disruptive Technologies Research AS
author_email = developer-support@disruptive-technologies.com
url = https://github.com/disruptive-technologies/disruptive-dataconnector
keywords =
    disruptive
    technologies
    dt
    integration
    api
license_file = LICENSE
classifiers = 
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent

[options]
python_requires = >=3.7
install_requires =
    pyjwt >= 2.0.0, < 3.0.0
    disruptive >= 0.6.0
packages = find:

[options.packages.find]
exclude =
    tests
    tests.*

[options.extras_require]
dev =
    setuptools>=54.2.0
    wheel>=0.36.2
    pytest>=6.2.2
    pytest-mock>=3.5.1
    pytest-cov>=2.11.1
    mypy>=0.812
    flake8>=3.9.0
